--- a/themes/tee/assets/css/block-editor.css
+++ b/themes/tee/assets/css/block-editor.css
@@ -12,15 +12,16 @@
 }
 
 /* Quote Blocks */
+blockquote {
+    border-left-width: 0;
+}
 .wp-block-quote {
     color: #363636;
     font-size: 24px;
     font-style: normal;
     width: fit-content;
-    max-width: 750px;
+    max-width: 750px !important;
     text-align: right;
-    margin-left: auto;
-    margin-right: auto;
     padding-left: 35px;
     padding-top: 1px;
     background-image: url(../img/icons/quote-marks-reg.png);
