--- a/themes/tee/assets/css/block-editor.css
+++ b/themes/tee/assets/css/block-editor.css
@@ -10,6 +10,7 @@
     --colour-tpink: #ff3aca;
 
     /* Font Sizes */
+    --fontsize-page-title: 62px;
     --fontsize-extra-large: 42px;
     --fontsize-large: 35px;
     --fontsize-medium: 30px;
@@ -20,8 +21,20 @@
     --fontsize-extra-small: 12px;
 }
 
+body {
+    font-family: "Chivo"!important;
+    font-weight: 400;
+    font-size: 18px;
+}
+
+/* Captions */
+figcaption {
+    text-align: center;
+    font-size: var(--fontsize-extra-small);
+}
+
 /* Content Widths */
-.entry-content > *:not(.alignfull) {
+.entry-content > *:not(.alignfull), .entry-header {
     max-width: 990px;
     margin-left: auto;
     margin-right: auto;
@@ -33,6 +46,30 @@
     width: 100%;
 }
 
+/* Page Title */
+.entry-title {
+    /* font-family: "Chivo"!important; */
+    font-size: var(--fontsize-page-title);
+    font-style: normal;
+}
+
+/* Headings */
+h1, h2, h3, h4, h5, h6 {
+    font-weight: 700;
+    font-family: "Chivo"!important;
+}
+h1 {font-size: var(--fontsize-extra-large);}
+h2 {font-size: var(--fontsize-large);}
+h3 {font-size: var(--fontsize-medium);}
+h4 {font-size: var(--fontsize-above-avg);}
+h5 {font-size: var(--fontsize-normal);}
+h6 {font-size: var(--fontsize-small);}
+
+/* List Blocks */
+ul, ol {
+    list-style-position: inside !important;
+}
+
 /* Button Blocks */
 .wp-block-button {
     height: 46px;
@@ -40,6 +77,7 @@
     border-radius: 3px;
     font-size: var(--fontsize-below-medium);
     transition: background-color 0.4s;
+    align-items: center;
 }
 .wp-block-button__link {
     padding: 0 1em;
@@ -51,7 +89,7 @@
 
 /* Quote Blocks */
 blockquote {
-    border-left-width: 0 !important; /* foundations override */
+    border-left-width: 0 !important;
 }
 .wp-block-quote {
     font-size: 24px;
@@ -75,6 +113,7 @@ blockquote {
 .wp-block-quote cite {
     font-size: 17px;
     font-style: normal;
+    color: var(--colour-tblack);
 }
 .wp-block-quote.is-style-large {
     background-image: url(../img/icons/quote-marks-large.png);
@@ -90,8 +129,121 @@ blockquote {
     background-image: url(../img/icons/quote-marks-large.png);
     background-repeat: no-repeat;
     background-position: top left;
+    padding: 25px 0 0;
+    text-align: right;
 }
-.wp-block-pullquote.is-style-solid-color p {
-    background-image: url(../img/icons/quote-marks-white.png);
-    font-size: 42px;
+.wp-block-pullquote p {
+    font-size: var(--fontsize-extra-large);
+    margin-bottom: 0;
+    padding-bottom: 25px;
+    border-bottom: 1px solid var(--colour-twhite);
+    text-align: left;
+}
+.wp-block-pullquote cite {
+    font-style: normal;
+    font-size: var(--fontsize-below-medium);
+}
+
+/* Code Block */
+.wp-block-code {
+    margin: 5px 0 15px;
+}
+/* Preformatted Code Block */
+.wp-block-preformatted {
+    margin: 5px 0 15px;
+    color: var(--colour-tgrey);
+}
+
+/* Table Blocks */
+.wp-block-table table {
+    margin-bottom: 10px;
+}
+.wp-block-table th {
+    font-size: var(--fontsize-normal);
+}
+.wp-block-table th {
+    font-size: var(--fontsize-normal);
+}
+.wp-block-table td {
+    font-size: var(--fontsize-small);
+}
+.wp-block-table tbody tr:nth-child(2n), .wp-block-table thead, .wp-block-table tfoot {
+	background-color: inherit;
+}
+.wp-block-table tbody, .wp-block-table thead, .wp-block-table tfoot {
+    border-color: var(--colour-tlightgrey);
+}
+.wp-block-table.is-style-redheader-table table, .wp-block-table.is-style-blueheader-table table {
+    border-collapse: separate;
+}
+.wp-block-table.is-style-redheader-table td,
+.wp-block-table.is-style-blueheader-table td {
+    border: 1px solid var(--colour-tlightgrey);
+}
+.wp-block-table.is-style-redheader-table thead th {
+    background-color: var(--colour-tred);
+    color: var(--colour-twhite);
+}
+.wp-block-table.is-style-blueheader-table thead th {
+    background-color: var(--colour-tblue);
+}
+.wp-block-table figcaption {
+    color: var(--colour-tgrey);
+}
+
+/* Verse Block */
+.wp-block-verse {
+    margin-top: 5px;
+    margin-bottom: 5px;
+    padding-left: 2.5%;
+    border-left: 4px solid var(--colour-tblue);
+}
+
+/* Gallery Blocks */
+.wp-block-gallery.has-nested-images figure.wp-block-image figcaption {
+    background: linear-gradient(0deg,#5b9ef070,#5b9ef030 70%,transparent);
+}
+
+/* Audio */
+.wp-block-audio figcaption {
+    margin-top: 0;
+}
+
+/* Cover Block */
+.wp-block-cover {
+    min-height: 220px;
+}
+
+/* File Block */
+.wp-block-file {
+    margin-top: 10px;
+}
+.wp-block-file a:not(.wp-block-file__button){
+    color: var(--colour-tred);
+    transition: color 0.4s;
+}
+.wp-block-file a:not(.wp-block-file__button):hover {
+    color: var(--colour-tblue);
+}
+.wp-block-file .wp-block-file__button {
+    background-color: var(--colour-tblack);
+    border-radius: 3px;
+    transition: color 0.4s;
+}
+.wp-block-file .wp-block-file__button:hover {
+    background-color: var(--colour-tred);
+}
+
+/* Media and Text Block */
+.wp-block-media-text {
+    margin-top: 10px;
+    margin-bottom: 10px;
+    padding: 10px 0;
+    border-top: 4px solid var(--colour-tblack);
+    border-bottom: 4px solid var(--colour-tblack);
+}
+
+/* Video Block */
+.wp-block-embed.is-type-video {
+    text-align: center;
 }
