--- a/themes/tee/assets/css/block-editor.css
+++ b/themes/tee/assets/css/block-editor.css
@@ -29,36 +29,15 @@ body {
     background-color: rgb(199, 180, 180);
 }
 
-/* Header */
-.site-header {
-    background-color: #e0e0e1;
-    padding: 10px 30px;
-    position: relative;
-    z-index: 99;
-}
-.site-header.white-header {
-    background-color: #ffffff80;
-}
-.main-navigation .menu {
-    justify-content: flex-end;
-    text-transform: uppercase;
-    font-size: var(--fontsize-below-medium);
-    font-weight: 700;
-}
-.main-navigation .menu-item a {
-    color: var(--colour-tblack);
-    transition: color 0.4s;
-}
-.main-navigation .menu-item a:hover, .main-navigation .menu-item a:focus {
-    color: var(--colour-tblue);
-}
-.site {
-    position: relative;
+/* Front-page styling */
+#tee-front-page-wrapper {
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: 1fr;
 }
 .tee-front-page {
-    position: absolute;
-    top: 0;
-    left: 0;
+    grid-column: 1/-1;
+    grid-row: 1/-1;
 }
 .tee-front-page-banner {
     display: grid;
@@ -76,6 +55,32 @@ body {
     grid-row: 2/-1;
     font-size: calc(1.8 * var(--fontsize-page-title));
     padding-left: 1em;
+}
+
+/* Header */
+.site-header {
+    background-color: #e0e0e1;
+    padding: 10px 30px;
+    grid-column: 1/-1;
+    grid-row: 1/-1;
+    height: max-content;
+    z-index: 99;
+}
+.site-header.white-header {
+    background-color: #ffffff80;
+}
+.main-navigation .menu {
+    justify-content: flex-end;
+    text-transform: uppercase;
+    font-size: var(--fontsize-below-medium);
+    font-weight: 700;
+}
+.main-navigation .menu-item a {
+    color: var(--colour-tblack);
+    transition: color 0.4s;
+}
+.main-navigation .menu-item a:hover, .main-navigation .menu-item a:focus {
+    color: var(--colour-tblue);
 }
 
 /* Page Templates */
@@ -344,6 +349,27 @@ blockquote {
 }
 .wp-container-6207e20aa1d00.wp-block-group {
     border-width: 0;
+}
+
+/* Footer */
+.site-footer p {
+    margin-bottom: 0;
+}
+.tee-footer-top {
+    background-color: var(--colour-tblack);
+    color: var(--colour-twhite);
+    font-size: var(--fontsize-small);
+    padding: 20px;
+    margin-bottom: 5px;
+}
+.tee-footer-divider {
+    min-height: 15px;
+    background-color: var(--colour-tblack);
+    color: var(--colour-twhite);
+}
+.site-info {
+    margin: 8px 0;
+    padding-left: 20px;
 }
 
 /* Plugin Overrides */
