--- a/themes/tee/assets/css/responsive.css
+++ b/themes/tee/assets/css/responsive.css
@@ -8,18 +8,12 @@
     .has-large-medium-size {
         font-size: calc(0.8 * var(--fontsize-medium));
     }
-    /* .has-large-font-size {
-        font-size: calc(0.8 * var(--fontsize-large));
+    .has-xx-large-font-size {
+        font-size: var(--fontsize-large);
     }
-    .has-large-font-size {
-        font-size: calc(0.8 * var(--fontsize-large));
+    .tee-front-page-banner .tee-banner-tagline {
+        font-size: calc(1.6 * var(--fontsize-page-title));
     }
-    .has-large-font-size {
-        font-size: calc(0.8 * var(--fontsize-large));
-    }
-    .has-large-font-size {
-        font-size: calc(0.8 * var(--fontsize-large));
-    } */
 }
 @media screen and (max-width: 991px) {
     .narrow-content {
@@ -27,9 +21,13 @@
     }
     .tee-banner-img img {
         max-height: 100%;
+        height: 100vh;
         max-width: none;
         margin-left: -50%;
     }
+    .has-xx-large-font-size {
+        font-size: calc(0.7 * var(--fontsize-large));
+    } 
     .has-x-large-font-size {
         font-size: calc(0.6 * var(--fontsize-extra-large));
     }
@@ -39,13 +37,33 @@
     .has-large-medium-size {
         font-size: calc(0.8 * var(--fontsize-medium));
     }
+    .tee-front-page-banner .tee-banner-tagline {
+        font-size: calc(1.2 * var(--fontsize-page-title));
+    }
 }
 
 @media screen and (max-width: 450px) {
     .entry-title {
         font-size: calc(0.8 * var(--fontsize-page-title));
     }
+    .has-xx-large-font-size {
+        font-size: calc(0.6 * var(--fontsize-large));
+    } 
     .site-footer .site-info {
         font-size: var(--fontsize-extra-small);
+    }
+    .tee-front-page-banner .tee-banner-tagline {
+        font-size: calc(0.9 * var(--fontsize-large));
+        padding: 0 20px;
+        text-align: center;
+    }
+    .wp-block-columns {
+        padding-right: 0;
+    }
+    .wp-block-column {
+        padding: 0 20px;
+    }
+    .wp-container-620ede260b6f8 {
+        flex-wrap: wrap;
     }
 }
