Finished cart page layout and styling

--- a/themes/tee/assets/css/block-editor.css
+++ b/themes/tee/assets/css/block-editor.css
@@ -191,6 +191,9 @@ a.button:hover,
 button.button:hover {
     background-color: var(--colour-tblue);
 }
+a.button {
+    padding-top: 5px;
+}
 
 /* Quote Blocks */
 blockquote {
