Minor Edits to archive.php and style changes to archive pages
Changes to archive pages to match rest of theme.

--- a/themes/tee/assets/css/page-styles.css
+++ b/themes/tee/assets/css/page-styles.css
@@ -196,6 +196,11 @@ body {
     font-size: var(--fontsize-above-avg);
     color: var(--colour-tblack);
 }
+.page-header.entry-header {
+    padding-left: 0;
+    padding-right: 0;
+    padding-top: 30px;
+}
 .tee-featured-post .post {
     background-color: var(--colour-twhite);
 }
